Fix: Utilisation de localhost au lieu de l'IP publique sur la VM
- Mise à jour .env.example avec localhost par défaut
- FIX_API.sh corrige automatiquement l'IP en localhost
- Ajout de NODE_ENV=production
- Documentation des deux configurations (VM et local)

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,11 @@
 # Configuration PostgreSQL + PostGIS
-# Connexion à la base de données distante
-DATABASE_URL="postgresql://asco_user:AscoSecure2024!@82.208.22.230:5432/asco_db?schema=public"
+# IMPORTANT: Sur la VM, utilisez localhost au lieu de l'IP publique
+# Sur la VM (production):
+DATABASE_URL="postgresql://asco_user:AscoSecure2024!@localhost:5432/asco_db?schema=public"
+
+# Depuis votre machine locale (développement):
+# DATABASE_URL="postgresql://asco_user:AscoSecure2024!@82.208.22.230:5432/asco_db?schema=public"
 
 # Port du serveur backend
 PORT=3000
+NODE_ENV=production
