--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "@prisma/client": "5.22.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
