--- a/server/package.json
+++ b/server/package.json
@@ -16,14 +16,18 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "5.22.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^22.10.1",
     "prisma": "5.22.0",
     "ts-node": "^10.9.2",
