--- a/CacaoTrackMobile/package.json
+++ b/CacaoTrackMobile/package.json
@@ -28,6 +28,8 @@
     "react-native-reanimated": "^4.2.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
+    "react-native-signature-capture": "^0.4.12",
+    "react-native-webview": "13.15.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
