--- a/CacaoTrackMobile/package.json
+++ b/CacaoTrackMobile/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^7.1.24",
     "@react-navigation/stack": "^7.6.11",
     "axios": "^1.13.2",
+    "babel-preset-expo": "^54.0.7",
     "date-fns": "^4.1.0",
     "expo": "~54.0.26",
     "expo-camera": "~17.0.9",
