--- a/CacaoTrackMobile/app.json
+++ b/CacaoTrackMobile/app.json
@@ -24,11 +24,14 @@
       "package": "com.cacaotrack.mobile",
       "versionCode": 1,
       "permissions": [
-        "ACCESS_COARSE_LOCATION",
-        "ACCESS_FINE_LOCATION",
-        "CAMERA",
-        "READ_EXTERNAL_STORAGE",
-        "WRITE_EXTERNAL_STORAGE"
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.CAMERA",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.RECORD_AUDIO"
       ],
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
@@ -53,7 +56,7 @@
     ],
     "extra": {
       "eas": {
-        "projectId": "cacaotrack-mobile-app"
+        "projectId": "9a5bab51-96d2-418a-aa26-8902d6c8ebc8"
       }
     }
   }
