--- a/CacaoTrackMobile/package.json
+++ b/CacaoTrackMobile/package.json
@@ -26,7 +26,7 @@
     "react-native-gesture-handler": "^2.29.1",
     "react-native-maps": "1.20.1",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "^4.2.0",
+    "react-native-reanimated": "~3.6.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
     "react-native-webview": "13.15.0",
