--- a/CacaoTrackMobile/eas.json
+++ b/CacaoTrackMobile/eas.json
@@ -1,6 +1,7 @@
 {
   "cli": {
-    "version": ">= 13.2.5"
+    "version": ">= 13.2.5",
+    "appVersionSource": "local"
   },
   "build": {
     "development": {
@@ -10,14 +11,13 @@
     "preview": {
       "distribution": "internal",
       "android": {
-        "buildType": "apk",
-        "gradleCommand": ":app:assembleRelease"
+        "buildType": "apk"
       }
     },
     "production": {
+      "distribution": "internal",
       "android": {
-        "buildType": "apk",
-        "gradleCommand": ":app:assembleRelease"
+        "buildType": "apk"
       }
     }
   },
