--- a/CacaoTrackMobile/package.json
+++ b/CacaoTrackMobile/package.json
@@ -23,11 +23,11 @@
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-gesture-handler": "^2.29.1",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "~3.6.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.18.0",
+    "react-native-screens": "~4.16.0",
     "react-native-webview": "13.15.0",
     "socket.io-client": "^4.8.1"
   },
