--- a/CacaoTrackMobile/app.json
+++ b/CacaoTrackMobile/app.json
@@ -21,7 +21,8 @@
         "backgroundColor": "#8B4513"
       },
       "package": "com.cacaotrack.mobile",
-      "versionCode": 1
+      "versionCode": 2,
+      "usesCleartextTraffic": true
     },
     "web": {
       "favicon": "./assets/favicon.png"
