--- a/app.json
+++ b/app.json
@@ -1,5 +1,30 @@
 {
   "expo": {
+    "name": "CacaoTrack Agent",
+    "slug": "vite_react_shadcn_ts",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "userInterfaceStyle": "light",
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "ios": {
+      "supportsTablet": true,
+      "bundleIdentifier": "com.cacaotrack.agent"
+    },
+    "android": {
+      "package": "com.cacaotrack.agent",
+      "permissions": [
+        "ACCESS_FINE_LOCATION",
+        "ACCESS_COARSE_LOCATION",
+        "CAMERA",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE",
+        "ACCESS_NETWORK_STATE",
+        "INTERNET"
+      ],
+      "versionCode": 1
+    },
     "extra": {
       "eas": {
         "projectId": "df70c744-9e9e-42ad-9de6-ca5609256d38"
