--- a/CacaoTrackMobile/package.json
+++ b/CacaoTrackMobile/package.json
@@ -17,17 +17,21 @@
     "babel-preset-expo": "^54.0.7",
     "date-fns": "^4.1.0",
     "expo": "~54.0.26",
+    "expo-build-properties": "~1.0.10",
     "expo-camera": "~17.0.9",
     "expo-image-picker": "~17.0.8",
     "expo-location": "~19.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
+    "react-dom": "^19.2.3",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
+    "react-native-uuid": "^2.0.3",
+    "react-native-web": "^0.21.2",
     "react-native-webview": "13.15.0",
     "socket.io-client": "^4.8.1"
   },
