--- a/CacaoTrackMobile/package.json
+++ b/CacaoTrackMobile/package.json
@@ -6,13 +6,16 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:android": "eas build --platform android --profile preview",
+    "build:ios": "eas build --platform ios --profile preview"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/native": "^7.1.24",
     "@react-navigation/stack": "^7.6.11",
+    "@react-navigation/bottom-tabs": "^7.1.24",
     "axios": "^1.13.2",
     "babel-preset-expo": "^54.0.7",
     "date-fns": "^4.1.0",
@@ -31,6 +34,7 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-uuid": "^2.0.3",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.21.2",
     "react-native-webview": "13.15.0",
     "socket.io-client": "^4.8.1"
