feat: Ajouter support Expo au projet mobile - Ajouter package expo ~51.0.0 et expo-status-bar - Configurer app.json pour Expo avec iOS/Android/Web - Ajouter scripts expo:start, expo:android, expo:ios, expo:web - Changer main vers node_modules/expo/AppEntry.js - CrÃ©er script install-expo.ps1 pour installation facile - Ajouter documentation FIX_EXPO.md

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,5 +1,37 @@
 {
-  "name": "CacaoTrack Agent",
-  "displayName": "CacaoTrack Agent"
+  "expo": {
+    "name": "CacaoTrack Agent",
+    "slug": "cacaotrack-agent",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/icon.png",
+    "userInterfaceStyle": "light",
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#8B4513"
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "ios": {
+      "supportsTablet": true,
+      "bundleIdentifier": "com.cacaotrack.agent"
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#8B4513"
+      },
+      "package": "com.cacaotrack.agent"
+    },
+    "web": {
+      "favicon": "./assets/favicon.png"
+    },
+    "plugins": [
+      "expo-location",
+      "expo-image-picker"
+    ]
+  }
 }
 
