--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,11 +1,15 @@
 {
   "name": "cacaotrack-mobile",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "expo:start": "expo start",
+    "expo:android": "expo start --android",
+    "expo:ios": "expo start --ios",
+    "expo:web": "expo start --web",
     "test": "jest",
     "lint": "eslint ."
   },
@@ -29,7 +33,9 @@
     "socket.io-client": "^4.7.2",
     "date-fns": "^3.0.6",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-paper": "^5.11.6"
+    "react-native-paper": "^5.11.6",
+    "expo": "~51.0.0",
+    "expo-status-bar": "~1.12.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
