--- a/mobile/app.json
+++ b/mobile/app.json
@@ -3,6 +3,7 @@
     "name": "CacaoTrack Agent",
     "slug": "cacaotrack-agent",
     "version": "1.0.0",
+    "sdkVersion": "51.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -23,7 +24,12 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#8B4513"
       },
-      "package": "com.cacaotrack.agent"
+      "package": "com.cacaotrack.agent",
+      "permissions": [
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.RECORD_AUDIO"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -31,7 +37,6 @@
     "plugins": [
       "expo-location",
       "expo-image-picker"
-    ]
+    ],
   }
 }
-
