docs: Ajouter documentation pour quota builds epuise - Projet EAS cree avec succes (ID: febb014b-2271-4040-8865-b177815297dd) - Documenter solutions pour quota epuise - Ajouter options: attendre, upgrade, nouveau compte, build local

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -38,5 +38,11 @@
       "expo-location",
       "expo-image-picker"
     ],
+    "extra": {
+      "eas": {
+        "projectId": "febb014b-2271-4040-8865-b177815297dd"
+      }
+    },
+    "owner": "livai"
   }
 }
