--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,28 +14,25 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "18.3.1",
-    "react-native": "0.73.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.3.1",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "react-native-screens": "^3.29.0",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-gesture-handler": "^2.14.1",
-    "react-native-reanimated": "^3.6.1",
-    "react-native-maps": "^1.10.0",
-    "react-native-geolocation-service": "^5.3.1",
-    "react-native-signature-canvas": "^4.7.2",
-    "@react-native-community/netinfo": "^11.2.1",
-    "react-native-image-picker": "^7.1.0",
-    "@react-native-async-storage/async-storage": "^1.21.0",
     "axios": "^1.6.5",
-    "socket.io-client": "^4.7.2",
     "date-fns": "^3.0.6",
-    "react-native-vector-icons": "^10.0.3",
-    "react-native-paper": "^5.11.6",
     "expo": "~51.0.0",
-    "expo-status-bar": "~1.12.1"
+    "expo-image-picker": "~15.1.0",
+    "expo-location": "~17.0.1",
+    "expo-status-bar": "~1.12.1",
+    "react": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-paper": "^5.11.6",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "~3.31.1",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
@@ -45,14 +42,14 @@
     "@react-native/eslint-config": "^0.73.2",
     "@react-native/metro-config": "^0.73.3",
     "@react-native/typescript-config": "^0.73.1",
-    "@types/react": "^18.2.48",
+    "@types/react": "~18.2.79",
     "@types/react-test-renderer": "^18.0.7",
     "babel-jest": "^29.7.0",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "prettier": "^3.1.1",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "~5.3.3"
   },
   "engines": {
     "node": ">=18"
