--- a/mobile/package.json
+++ b/mobile/package.json
@@ -25,6 +25,7 @@
     "expo-image-picker": "~15.1.0",
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
+    "@expo/vector-icons": "^14.0.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
