--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/index.ts",
-    "dev": "ts-node src/index.ts",
+    "start": "ts-node --transpile-only --no-cache src/index.ts",
+    "dev": "ts-node --transpile-only src/index.ts",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:seed": "ts-node src/seed.ts"
